# 250words

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: python-app.yml
250words/: __init__.py  auth.py
src/: __init__.py  auth.py  blog.py  db.py
src/static/: output.css  style.css
src/templates/: base.html
src/templates/blog/: index.html  post.html
tests/: conftest.py  test_auth.py  test_blog.py  test_factory.py
