[project]
name = "src"
version = "0.0.1"
description = "Write 250 words everyday"
authors = [
    {name = "Srishilesh P S", email = "abc@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE.txt"}
dependencies = [
    "flask", "waitress"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]